<resources>
    <string name="app_name">Medicine Reminder</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_type">Medicine Type</string>
    <string name="dose_quantity">Dose Quantity</string>
    <string name="time_slots">Time Slots</string>
    <string name="morning">Morning</string>
    <string name="select_time">Select Time</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="save_medicine">Save Medicine</string>
    <string name="reminder">Reminder</string>
    <string name="home">Home</string>
    <string name="facebook_app_id">787699476661310</string>
    <string name="facebook_client_token">cc2c10e5f0639d368aca8bf975ffaace</string>
    <string name="app_id">a6645d49ee2ecc</string>
    <string name="app_key">aace93ce8c7ea8f0489f0b556592e0e01</string>

    <array name="spinner_type">
        <item>Pill</item>
        <item>Spray</item>
        <item>Drop</item>
        <item>Liquid</item>
        <item>Insulin</item>
        <!-- Add more items as needed -->
    </array>

    <array name="spinner_slots">
        <item>Three Times Daily</item>
        <item>Two Times Daily</item>
        <item>One Time Daily</item>
        <!-- Add more items as needed -->
    </array>

    <array name="spinner_day">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
        <!-- Add more items as needed -->
    </array>

</resources>