<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewReminder">

    <data>
        <variable
            name="viewModel"
            type="com.proloy.medicinereminder.viewmodel.ReminderViewModel" />
        <import type="android.view.View" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:text="@string/reminder"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicine_name"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="#C82626"
                    app:boxStrokeWidth="1dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/autoCompleteTextViewFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.medicineName}"
                        android:background="@null"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputDivision"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/medicine_type"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="#C82626"
                    app:boxStrokeWidth="1dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/autoCompleteTextViewType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/spinner_type"
                        android:text="@={viewModel.medicineType}"
                        android:inputType="none"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dose_quantity"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="#C82626"
                    app:boxStrokeWidth="1dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@={viewModel.doseQuantity}"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/time_slots"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="#C82626"
                    app:boxStrokeWidth="1dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/autoCompleteTimeSlots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/spinner_slots"
                        android:inputType="none"
                        android:onItemClick="@{(parent, view, position, id) -> viewModel.onSlotSelected(position)}"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.showMorning ? View.VISIBLE : View.GONE}">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/time_slots"
                        android:layout_marginTop="10dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:hintEnabled="true"
                        app:boxStrokeColor="#C82626"
                        app:boxStrokeWidth="1dp"
                        app:hintAnimationEnabled="true">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/autoCompleteTextViewSlotOne"
                            android:entries="@array/spinner_day"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <!-- Time picker for Morning -->

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> viewModel.showTimePicker(context,`morning`)}"
                            android:text="@string/select_time" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:text="@{viewModel.selectedMorningTime}"
                            android:textSize="18dp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.showAfternoon ? View.VISIBLE : View.GONE}">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/time_slots"
                        android:layout_marginTop="10dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:hintEnabled="true"
                        app:boxStrokeColor="#C82626"
                        app:boxStrokeWidth="1dp"
                        app:hintAnimationEnabled="true">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/spinner_day"
                            android:id="@+id/autoCompleteTextViewSlotTwo"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Time picker for Afternoon -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> viewModel.showTimePicker(context, `afternoon`)}"
                            android:text="@string/select_time" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:text="@{viewModel.selectedAfternoonTime}"
                            android:textSize="18dp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.showNight ? View.VISIBLE : View.GONE}">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/time_slots"
                        android:layout_marginTop="10dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:hintEnabled="true"
                        app:boxStrokeColor="#C82626"
                        app:boxStrokeWidth="1dp"
                        app:hintAnimationEnabled="true">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/spinner_day"
                            android:id="@+id/autoCompleteTextViewSlotThree"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Time picker for Night -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> viewModel.showTimePicker(context, `night`)}"
                            android:text="@string/select_time" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:text="@{viewModel.selectedNightTime}"
                            android:textSize="18dp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColor"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/oval_edittext"
                    android:onClick="@{() -> viewModel.saveMedicineWithReminders()}"
                    android:text="@string/save_medicine"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>